<resources>

    <string name="app_name">ARPAV Idro</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_favorites_sensor">FavoritesSensor</string>
    <string name="favorites">Preferiti</string>
    <string name="all">Tutti</string>
    <string name="empty_sensor">Nessun preferito selezionato</string>
    <string name="empty_sensor_note">Vai alla sezione Tutti per visualizzare tutte le stazioni ed iniziare ad aggiungerle ai tuoi preferiti</string>

    <color name="black">#000000</color>

    <string name="title_activity_all_sensor">AllSensorActivity</string>
    <string name="titleMap">Mappa stazioni</string>
    <string name="alertDialogGpsTitle">Segnale GPS disattivato</string>
    <string name="alertDialogGpsMessage">Attivare il Gps per rilevare la propria posizione nella mappa?</string>
    <string name="loading">Caricamento..</string>
    <string name="loadingData">Caricamento dei dati</string>
    <string name="alertDialogNetworkTitle">Connessione non disponibile</string>
    <string name="alertDialogNetworkMessage">Connettiti alla rete per visualizzare correttamente i dati</string>
    <string name="btnClose">Chiudi</string>
    <string name="checkBoxGps">Non richiedermelo in futuro</string>
    <string name="lividroLegend">Livello idrometrico</string>
    <string name="precLegend">Livello pluviometrico</string>
    <string name="notOnlineNote">Problemi di connessione: verifica di essere connesso alla rete</string>
    <string name="interruptedException">Interruzione dell\'esecuzione: possibili problemi di connessione</string>
    <string name="xmlNullExceptionNote">Errore nella lettura dei tadi..</string>
    <string name="idroStation">Staz. idrometriche</string>
    <string name="pluvioStation">Staz. pluviometriche</string>
    <string name="alert">Attenzione!</string>
    <string name="alertDialogOutLimitMessage">Ti trovi al di fuori dei confini del Veneto, dove non vi sono stazioni di monitoraggio. Desideri continuare?</string>
    <color name="graphBackground">#707070</color>
    <color name="graphLividro">#E15858</color>
    <color name="graphPluvio">#553DDA</color>

</resources>