<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/logo"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="50"
            android:gravity="fill_vertical"
            android:textColor="#000"
            android:textSize="10dip" >
        </TextView>

        <ImageView
            android:id="@+id/denom"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="50"
            android:background="@drawable/banner_app" >
        </ImageView>
    </LinearLayout>
    
    
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/bg_gradient_top_bar" >

        <TextView
            android:id="@+id/empty_sensor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            
            android:gravity="center"
            android:text="@string/empty_sensor"
            android:textColor="#FFF"
            android:textSize="19dp"
            android:typeface="sans" />
    </RelativeLayout>

    <TextView
        android:id="@+id/empty_sensor_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_weight="0.18"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:text="@string/empty_sensor_note" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="#C0C0C0"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_favorites"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginRight="1dp"
            android:layout_weight="33"
            android:background="@drawable/bg_footer"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/favorites"
            android:textColor="#000"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btn_all"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="33"
            android:background="@drawable/bg_footer"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/all"
            android:textColor="#000"
            android:textSize="14dp" />

    </LinearLayout>



</LinearLayout>