<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/logo"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="50"
            android:gravity="fill_vertical"
            android:textColor="#000"
            android:textSize="10dip" >
        </TextView>

        <ImageView
            android:id="@+id/denom"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="50"
            android:background="@drawable/banner_app" >
        </ImageView>
    </LinearLayout>

        <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/bg_gradient_top_bar" >

        <TextView
            android:id="@+id/titleMap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="7dp"
            android:layout_toLeftOf="@+id/bar"
            android:gravity="left"
            android:text="@string/titleMap"
            android:textColor="#FFF"
            android:textSize="19dp"
            android:typeface="sans" />
        

        
        <ImageView
            android:id="@+id/bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:maxWidth="1dp"
            android:layout_toLeftOf="@+id/button_menu"
            android:src="@drawable/status_bar_item_app_background_normal" />
        
        <ImageButton
            android:id="@+id/button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="false"
            android:layout_centerVertical="true"
            android:layout_marginRight="2dp"
            android:background="@drawable/button_menu"
            android:text="" />
        
    </RelativeLayout>
    
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:background="#E4E4E4" >

        <com.readystatesoftware.maps.TapControlledMapView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mapview"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:apiKey="0cAL3uyKAK8y0g3BuVfO7Pt-Qe_uEz_zItQeaSw"
            android:clickable="true" />
    
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#C0C0C0"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/idroImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/red" />

            <TextView
                android:id="@+id/idroText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idroStation"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/pluvioImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/blue" />

            <TextView
                android:id="@+id/pluvioText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pluvioStation"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14dp" />



        </LinearLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#C0C0C0"
            android:gravity="center"
            android:orientation="horizontal" >
            
            <ImageView
                android:id="@+id/idroImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/green" />

            <TextView
                android:id="@+id/idroText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idroPluvioStation"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="14dp" />
            
            
        </LinearLayout>
        
        
    </LinearLayout>
            
</LinearLayout>